Tests to Service Impl is ready